Version 12

--Enemy base bullet speed now gradually increases, between levels 20 and 80, 
  up to being equal to player's bullet speed (before, enemy bullet speed was 
  always half player bullet speed).

--Fixed to eliminate easy 1-descent token doubling by reducing base level of 
  tokens that are on the floor inside a token.

--Increased difficulty modifier inside sub-token recursions.

--Capped heart bonus on knock-down to 8, to prevent gigantic heart bonuses
  that make you effectively invincible on higher levels.

--Fixed level difficulty modifier number overflower issues (thanks Jimmy 
  Andrews).




Version 11   2011-February-16

--Powers are sorted with strongest to the right whenever they are passed 
  upwards to encourage additional pick-ups (which will replace weakest powers 
  on left).

--Fixed delay and excess cpu/memory usage when entering high-level power-up 
  tokens (thanks Jimmy Andrews).

--Changed to only decay the weakest two powers in the set (encourages picking 
  up new powers to protect a big power that you have built up).

--Changed to only replace weakest power (or any empty slots) with hearts on 
  knock-down, to make knock-down even less brutal and frustrating.  Also sort 
  powers strongest-right on knock-down to encourage pickups before rising.

--Knock-down hearts that are added depend on difficulty of level you are being 
  knocked down into (more help when knocked down into a harder level).

--Fixed drawing glitch in power-set majority shading when a new token is pushed
  in.

--Fixed potential level-0 difficulty-free power-up-building exploit.

--Changed so that hearts are knocked off higher self when hit to thwart the 
  heart rush exploit.

--Changed to never decay hearts.

--Next-higher-self's hearts are always trimmed to match lower self's hearts to
  thwart heart-bootstrapping exploit.

--Changed behavior of Burst power so that it does not act effectively as a 